# fastapi_todo

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: config.py  create_db.py  main.py
app/auth/: dependencies.py  jwt.py
app/db/: session.py
app/models/: task.py  user.py
app/routers/: auth.py  tasks.py
app/schemas/: task.py
app/utils/constants/: constants.py
tests/: test_auth.py  test_tasks.py
